Bug 282189 - system folders are not showing up at the top of an account
Summary: system folders are not showing up at the top of an account
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 1.99.0
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-17 08:40 UTC by m.wege
Modified: 2011-12-09 09:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2011-09-17 08:40:12 UTC
Version:           1.99.0 (using KDE 4.7.1) 
OS:                Linux

System folders (drafts, inbox, trash, spam, templates) are not showing up at the top of an account. This was the case in Kmail1, with kmail2 it is very confusing.

Reproducible: Didn't try

Steps to Reproduce:
-


Expected Results:  
System-folders should show up at the top of an account.

OS: Linux (x86_64) release 3.0.0-11-generic
Compiler: gcc
Comment 1 FiNeX 2011-09-18 17:24:27 UTC
Bug confirmed... inbox, outbox, ecc, should be listed before the other custom folders.

I'm experiencing this bug using several IMAP accounts.
Comment 2 FiNeX 2011-11-07 09:45:14 UTC
This bug is still valid 4.7.3
Comment 3 Jonathan Marten 2011-11-07 12:09:41 UTC
FiNeX: is this happening with local folders, or just with IMAP accounts?
Comment 4 FiNeX 2011-11-07 12:39:19 UTC
Just with IMAP
Comment 5 András Manţia 2011-12-09 08:05:36 UTC
Git commit 25bcfce5d850514783007e776a2a9363df012bad by Andras Mantia.
Committed on 09/12/2011 at 09:05.
Pushed by amantia into branch 'master'.

Fix sorting of accounts: system folders should be listed first.
For the bug reporters: check https://git.reviewboard.kde.org/r/103317 what you need to do in order to get the sorting right.

BUG:282189
REVIEW:103317
FIXED-IN: 4.8.0

M  +42   -36   mailcommon/entitycollectionorderproxymodel.cpp

http://commits.kde.org/kdepim/25bcfce5d850514783007e776a2a9363df012bad
Comment 6 m.wege 2011-12-09 09:34:50 UTC
I see in the rewiew request that this patch does not include the spam/junk
folder. I am aware that it was not the case in old Kmail, but it would
certainly make sense.
Comment 7 m.wege 2011-12-09 09:39:31 UTC
You answered here: https://bugs.kde.org/show_bug.cgi?id=260572#c5 (since I put the comment first at the wrong place.

> I don't understand your comment. :) Are you sure you replied to the right BR?
> Maybe you wanted to reply to bug 282189? And indeed, spam is not handled as we
> have no notion of a special folder called spam, so the only way to detect that
> would be by name, which would fail in many cases, especially when the names
> are translated.
That is not correct. Actually (at least Kmail1 has and I assume this has remained, at the moment I have not Kmail2 running to check) there is an Anti-Spam-Wizard in Kmail where one can defined the folder where the detected Spam can be put. This is not perfect (since it does not differenciate per account), If this not enough for you implementing this, would an extra wish implementing that noting of a spam-folder have a chance to be implemented or is there any general thinking against it?
Comment 8 András Manţia 2011-12-09 09:42:42 UTC
I have an idea, that you can file it as a wish: an option to the context menu where you can mark any folder as a special one. Would make the marking easier (now it is not that straightforward how the special ones are decided).

Re. the SPAM wizard, yes true that could mark the main spam folder as spam automatically (another wish). But would not help to identify spam folders on imap accounts, where the spam is put server-side.