Fix sorting of accounts: system folders should be listed first. For the bug reporters: check https://git.reviewboard.kde.org/r/103317 what you need to do in order to get the sorting right.

BUG:282189
REVIEW:103317
FIXED-IN: 4.8.0